auto-test/tests/chapter_18/invalid_types/invalid_member_operators/member_of_non_struct.c
void *malloc(unsigned long size);

struct a {
  int x;
  int y;
};

int main(void) {
  struct a *ptr = malloc(sizeof(struct a));
  ptr.x = 10; 
}